fixed geocoder bug (using a separate thread preventing mordecai to use keras); improved web ui; fixed json serialization in Tweet cassandra model
